# ecobank

./: .gitignore  .pre-commit-config.yaml  READY.md  TODO.md  config.py  debug_email.py  debug_i18n.py  imageUploadPlan.md  init_db.py  lint_errors.txt  pyproject.toml  reset_db.py  sample.env  update_translations.sh  wsgi.py
app/: __init__.py  cli.py  extensions.py  middleware.py  models.py  tasks.py
app/account/: __init__.py  routes.py
app/admin/: __init__.py  decorators.py  forms.py  routes.py
app/api/: __init__.py  routes.py
app/auth/: __init__.py  forms.py  routes.py
app/drafts/: __init__.py  routes.py
app/errors/: handlers.py
app/groups/: __init__.py  routes.py
app/main/: __init__.py  routes.py
app/notifications/: __init__.py  routes.py
app/paypal/: __init__.py  routes.py  services.py
app/templates/: base.html  index.html
app/utils/: email.py  hive.py  markdown_render.py  notifications.py  token_price.py
app/webhooks/: __init__.py  routes.py
migrations/: env.py
migrations/versions/: 01fe99e67393_add_notification_model.py  33c6781a7cf4_make_account_credits_non_nullable_and_.py  4617147cf581_add_locale_to_user.py  7c9f3a21b8d4_add_token_price_snapshot.py  99230b197a60_add_groups.py  9cfe60efdaed_add_user_profile_and_drafts.py  be21eeaed23c_initial_migration.py  (+7 more)
scripts/: backup.py  rotate_keys.py
vivero/: comino-crespo-pagina-modelo.md  flask-aliados-integration-plan.md  restore.world-ficha-botanica-del-chachafruto-48le.md  restore.world-restauracion-ecologica-en-la-finca-buena-vista-j5g8.md  vivero-especies-nativas-pagina-pilar.md
(+68 files in other folders)
